
install(FILES desktop-shell.xml DESTINATION share/nuclear-shell RENAME nuclear-desktop-shell.xml)
install(FILES settings.xml DESTINATION share/nuclear-shell RENAME nuclear-settings.xml)
install(FILES dropdown.xml DESTINATION share/nuclear-shell RENAME nuclear-dropdown.xml)
install(FILES screenshooter.xml DESTINATION share/nuclear-shell)
